; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_system.c___reload.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_system.c___reload.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SYS_RETURNTOMENU = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__reload() #0 {
  %1 = call i64 (...) @__stub_found()
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = call i32 (...) @__exception_closeall()
  %5 = call i32 (...) @reload()
  br label %6

6:                                                ; preds = %3, %0
  %7 = load i32, i32* @SYS_RETURNTOMENU, align 4
  %8 = call i32 @SYS_ResetSystem(i32 %7, i32 0, i32 0)
  ret void
}

declare dso_local i64 @__stub_found(...) #1

declare dso_local i32 @__exception_closeall(...) #1

declare dso_local i32 @reload(...) #1

declare dso_local i32 @SYS_ResetSystem(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
